Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110681

QCheckbox, QRadioButton wrong size when moving app between different DPI screens

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.7
    • 6.4.2
    • None
    • Windows 10 (22H2), 2 monitors with different DPI
    • Windows
    • 6017695bf (dev)

    Description

      On computer with two screens with different DPI (one with 100%, other with 200%), checkboxes look fine on screen with 100%, but too small when app moves to the screen with 200%.

      When having only one screen attached (any of those two), the app looks fine in both cases.

      When starting the app when only screen with 200% attached, then connecting screen with 100% and moving the app there, checkboxes are too big.

      Same relates to QRadioButtons, and dropdown button for QComboBox.

      To demonstrate, I used "tabdialog" example shipped with Qt (Tab Dialog Example), no modifications done. Please check the screenshots atached.

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-110681
          # Subject Branch Project Status CR V

          Activity

            People

              sorvig Morten Sørvig
              jadamec Jan Adamec
              Votes:
              5 Vote for this issue
              Watchers:
              8 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes